--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^1.1.0
   flutter_svg: ^0.19.3
+  smooth_star_rating: ^1.1.1
 
 dev_dependencies:
   flutter_test:
