--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   google_fonts: ^1.1.0
   flutter_svg: ^0.19.3
   smooth_star_rating: ^1.1.1
+  firebase_auth: ^0.15.5+2
+  provider: ^4.0.4
 
 dev_dependencies:
   flutter_test:
